--- a/src/main/webapp/i18n/en/identity.json
+++ b/src/main/webapp/i18n/en/identity.json
@@ -12,6 +12,7 @@
             "birthCountry": "Birth Country",
             "nationality": "Nationality",
             "passportNumber": "Passport Number",
+            "passportNumber.tooltip": "Passport has to be valid",
             "residencyCountry": "Residency Country",
             "maritalStatus": "Marital status",
             "childsNumber": "Number of childs",
