--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -4,7 +4,13 @@
 			"tooltip": "You must provide proof of sufficient financial resources (greater than or equal to 615 € monthly)",
 			"comingDate": "Arrival date in France",
 			"university": "University",
-			"training": "Training",
+			"trainingType": "Training level",
+			"trainingType.2": "Bac+2",
+			"trainingType.3": "Bac+3",
+			"trainingType.4": "Bac+4",
+			"trainingType.5": "Bac+5",
+			"trainingType.8": "Bac+8",
+			"training": "Training name",
 			"trainingStart": "Traning start date",
 			"trainingLength": "Training lenght (month)",
 			"resourceType": "Resource type",
