--- a/src/main/webapp/i18n/en/validation.json
+++ b/src/main/webapp/i18n/en/validation.json
@@ -21,6 +21,11 @@
 	    	"noHistory": "No history",
 	    	
 	    	"validate": "Validate on {{validationDate}} - {{validationAuthor}}"
+		},
+		"modal": {
+			"title": "Residency card validation",
+			"text": "Production of {{studentName}} student residency card has been launched !",
+			"button": "OK"
 		}
 	}
 }
