--- a/src/main/webapp/i18n/fr/address.json
+++ b/src/main/webapp/i18n/fr/address.json
@@ -8,7 +8,7 @@
 			"street": "Voie",
 			"complement": "Complément",
 			"postalCode": "Code postal",
-			"city": "Ville de résidence",
+			"city": "Ville",
 			"country": "Pays de résidence",
 			"phone": "Téléphone",
 			"email": "Email",
