--- a/src/main/webapp/i18n/fr/etudierTmp.json
+++ b/src/main/webapp/i18n/fr/etudierTmp.json
@@ -2,32 +2,36 @@
     "procedure": {
         "title": "Première demande de carte de séjour temporaire étudiant",
         "page.title": "Première demande de carte de séjour temporaire étudiant",
-        "step.title": "5 étapes pour déposer votre demande",
+        "step.title": "5 étapes pour déposer ma demande",
         "identity": {
-        	"step.short": "Etat-civil",
-        	"step.long": "Complétez votre état-civil et vos informations personnelles"
+        	"step.short": "Informations personnelles",
+        	"step.long": "Je vérifie mes informations personnelles",
+        	"step.long.true": "Je vérifie mes informations personnelles",
+        	"step.long.false": "Je renseigne mes informations personnelles"
         },
         "address": {
         	"step.short": "Coordonnées",
-        	"step.long": "Complétez vos coordonnées en France"
+        	"step.long": "Je vérifie mes coordonnées en France",
+        	"step.long.true": "Je vérifie mes coordonnées en France",
+        	"step.long.false": "Je renseigne mes coordonnées en France"
         },
         "project": {
         	"step.short": "Projet",
-        	"step.long": "Complétez les détails de votre projet"
+        	"step.long": "Je renseigne les détails de mon projet"
         },
         "summary": {
         	"step.short": "Récapitulatif",
-        	"step.long": "Vérifiez les informations de votre demande"
+        	"step.long": "Je vérifie ma demande avant de la valider"
         },
         "payment": {
         	"step.short": "Paiement",
-        	"step.long": "Payez vos frais de dossier et pré-payez vos taxes de séjour"
+        	"step.long": "Je paie mes frais de dossier et pré-paie les taxes de séjour"
         },
         "preparationText": "<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p><ul><li>d'un passeport valide,</li><li>d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li><li>d’un justificatif de domicile de moins de 3 mois (facture de gaz, d’électricité ou de téléphone, quittance de loyer, contrat de location, titre de propriété accompagné de l’attestation d’assurance du logement, attestation d’hébergement du logeur et copie de sa carte d’identité ou de séjour et de sa dernière quittance de gaz ou d’électricité,  attestation du responsable ou gérant et facture du dernier mois),</li><li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li><li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant).</li></ul><p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé.</p><p>Vous devrez apporter les originaux de ces documents lors du rendez-vous.</p><p><a href='#'>Trouver un interprète traducteur agréé</a></p>"
     },
     "summary": {
     	"form": {
-			"subtitle": "Vous êtes sur le point de déposer une demande de carte de séjour temporaire étudiant. Avant de procéder au paiement, assurez-vous que les informations ci-dessous soient correctes.",
+			"subtitle": "Vous êtes sur le point de déposer une demande de carte de séjour temporaire étudiant.<br/>Avant de procéder au paiement, assurez-vous que les informations ci-dessous soient correctes.",
 	    	"identity": "Mes informations personnelles",
 	    	"address": "Mes coordonnées",
 	    	"project": "Mon projet"
@@ -35,7 +39,7 @@
     },
     "payment" : {
 		"form": {
-			"informations": "<p>Vos frais de dossier s'élèvent à 50,00 euros. Ils seront débités quelle que soit l'issue de votre demande.</p><p>Vos taxes de séjour s'élèvent à 77,00 euros. Elles ne seront débitées qu'en cas d'issue favorable à votre demande.</p>"
+			"informations": "<p>Les frais de dossier s'élèvent à 58,00 euros. Ils seront débités quelle que soit l'issue de votre demande.</p><p>Les taxes de séjour s'élèvent à 19,00 euros. Elles ne seront débitées qu'en cas d'issue favorable à votre demande.</p>"
 		}
 	},
 	"final" : {
