--- a/src/main/webapp/i18n/fr/identity.json
+++ b/src/main/webapp/i18n/fr/identity.json
@@ -8,10 +8,11 @@
             "firstName": "Prénom(s)",
             "sex": "Sexe",
             "birthDate": "Date de naissance",
-            "birthCity": "Ville de naissance",
+            "birthCity": "Lieu de naissance",
             "birthCountry": "Pays de naissance",
             "nationality": "Nationalité",
             "passportNumber": "Numéro de passeport",
+            "passportNumber.tooltip": "Le passeport doit être en cours de validité",
             "residencyCountry": "Pays de résidence",
             "maritalStatus": "Situation familiale",
             "childsNumber": "Nombre d'enfants",
