--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -3,10 +3,16 @@
 		"form": {
 			"comingDate": "Date prévue d'arrivée en France",
 			"university": "Etablissement",
-			"training": "Formation",
+			"trainingType": "Niveau de la formation",
+			"trainingType.2": "Bac+2",
+			"trainingType.3": "Bac+3",
+			"trainingType.4": "Bac+4",
+			"trainingType.5": "Bac+5",
+			"trainingType.8": "Bac+8",
+			"training": "Intitulé de la formation",
 			"trainingStart": "Date de début de la formation",
 			"trainingLength": "Durée de la formation (mois)",
-			"resourceType": "Type de ressource",
+			"resourceType": "Type de ressources",
 			"resourceAmount.total": "Montant total des ressources (euros)",
 			"resourceAmount.monthly": "Montant mensuel des ressources (euros)",
             "document.title": "Joignez vos pièces justificatives",
