--- a/src/main/webapp/i18n/en/payment.json
+++ b/src/main/webapp/i18n/en/payment.json
@@ -1,7 +1,7 @@
 {
 	"payment" : {
 		"form": {
-			"cardOwner": "Card owner",
+			"cardOwner": "Card owner name",
 			"cardNumber": "Card number",
 			"cardExpiringDate": "Expiring date",
 			"cardCV": "CV code"
