--- a/src/main/webapp/i18n/fr/payment.json
+++ b/src/main/webapp/i18n/fr/payment.json
@@ -1,7 +1,7 @@
 {
 	"payment" : {
 		"form": {
-			"cardOwner": "Propriétaire de la carte",
+			"cardOwner": "Nom du titulaire de la carte",
 			"cardNumber": "Numéro de carte",
 			"cardExpiringDate": "Date d'expiration",
 			"cardCV": "Code de vérification"
