--- a/src/main/webapp/i18n/en/typeDemande.json
+++ b/src/main/webapp/i18n/en/typeDemande.json
@@ -3,7 +3,8 @@
         "TypeDemande" : {
             "SELECT": "{VALUE, select, premiere{premiere} reexamen{reexamen} other{}}",
             "premiere": "First application",
-            "reexamen": "Reexamen"
+            "reexamen": "Reexamen",
+            "renouvellement": "Renewal"
         }
     }
 }
