--- a/src/main/webapp/i18n/en/validation.json
+++ b/src/main/webapp/i18n/en/validation.json
@@ -10,12 +10,12 @@
 			"applicationType": "Application type"
 		},
 		"form": {
-	    	"title": "{{studentName}} - First application for study",
 	    	"identity": "User identity",
 	    	"preinscription": "(Pre)Inscription confirm on {{confirmationDate}} - {{confirmationAuthor}}",
 	    	"project": "Project",
 	    	"policeControl": "Police control",
 	    	"history": "SIEF History",
+	    	"history.list": "\"Student\" residency permit - du {{startDate}} au {{endDate}}",
 	    	"noHistory": "No history",
 	    	
 	    	"validate.h": "Validate on {{validationDate}} - {{validationAuthor}}",
