--- a/src/main/webapp/i18n/fr/typeDemande.json
+++ b/src/main/webapp/i18n/fr/typeDemande.json
@@ -3,7 +3,8 @@
         "TypeDemande" : {
             "SELECT": "{VALUE, select, premiere{premiere} reexamen{reexamen} other{}}",
             "premiere": "Primo-demande",
-            "reexamen": "Réexamen"
+            "reexamen": "Réexamen",
+            "renouvellement": "Renouvellement"
         }
     }
 }
