--- a/src/main/webapp/i18n/en/payment.json
+++ b/src/main/webapp/i18n/en/payment.json
@@ -2,8 +2,10 @@
 	"payment" : {
 		"form": {
 			"title": "Pay your application fee and pre-pay your residency taxes",
-			"text1": "Your application fee amounts to 50.00 euros. They will be charged regardless of the outcome of your application.",
-			"text2": "Your residency taxes amount to 77.00 euros. They will not be debited in case of a favorable decision",
+			"title.renouvellement": "Pre-pay your residency taxes",
+			"applicationFee": "Your application fee amounts to 50.00 euros. They will be charged regardless of the outcome of your application.",
+			"residencyTaxes": "Your residency taxes amount to 77.00 euros. They will not be debited in case of a favorable decision",
+			"residencyTaxes.renouvellement": "Your residency taxes amount to 49.00 euros. They will not be debited in case of a favorable decision",
 			"cardOwner": "Card owner",
 			"cardNumber": "Card number",
 			"cardExpiringDate": "Expiring date",
