--- a/src/main/webapp/i18n/fr/final.json
+++ b/src/main/webapp/i18n/fr/final.json
@@ -2,9 +2,10 @@
 	"final" : {
 		"form": {
     		"success": "Votre paiement s'est déroulé avec succès",
-    		"text1": "La recevabilité de votre dossier va être vérifiée par l'Administration des étrangers en France.<br>Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant à finaliser le dépôt de votre demande. <br>Si votre dossier n'est pas recevable, nous vous indiquerons les raisons et vous préciserons le(s) élément(s) manquant(s) le cas échéant.",
-    		"text2": "Lors du rendez-vous à l'Ambassade de France à Séoul, l'authenticité de votre passeport et de vos documents d'état civil sera vérifiée, et vos données biométriques enregistrées.",
-    		"text3": "A l'issue du rendez-vous, votre dossier sera instruit et vous recevrez une notification de la décision.<br>Si la décision est favorable et après débit des taxes de séjour, vous serez invité(e) à venir récupérer votre titre de séjour lorsqu'il est prêt . <br>Si la décision est défavorable, vous aurez la possibilité de demander un recours."
+    		"recevability": "La recevabilité de votre dossier va être vérifiée par l'Administration des étrangers en France.<br>Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant à finaliser le dépôt de votre demande. <br>Si votre dossier n'est pas recevable, nous vous indiquerons les raisons et vous préciserons le(s) élément(s) manquant(s) le cas échéant.",
+    		"rdv": "Lors du rendez-vous à l'Ambassade de France à Séoul, l'authenticité de votre passeport et de vos documents d'état civil sera vérifiée, et vos données biométriques enregistrées.",
+    		"decision": "A l'issue du rendez-vous, votre dossier sera instruit et vous recevrez une notification de la décision.<br>Si la décision est favorable et après débit des taxes de séjour, vous serez invité(e) à venir récupérer votre titre de séjour lorsqu'il est prêt. <br>Si la décision est défavorable, vous aurez la possibilité de demander un recours.",
+			"decision.renouvellement": "Votre dossier sera ensuite instruit et vous recevrez une notification de la décision.<br>Si la décision est favorable et après débit des taxes de séjour, vous serez invité(e) à venir récupérer votre titre de séjour lorsqu'il est prêt. <br>Si la décision est défavorable, vous aurez la possibilité de demander un recours."
 		}
 	}
 }
